# aspide

./: .envrc  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  pyrightconfig.json
.cursor/skills/circuitpython-monotonic-ns/: SKILL.md
assets/fritzting/: aspide-cabling.fzz
src/: code.py  colors.py  ha_client.py  settings.sample.toml  timeout.py  ui.py  utils.py
src/lib/: adafruit_requests.py
