[project]
name = "aspide"
version = "0.1.0"
description = "Home Assistant & Python powered Dialer"
requires-python = ">=3.13"
dependencies = [
    "adafruit-circuitpython-busdevice>=5.2.17",
    "adafruit-circuitpython-neopixel>=6.4.2",
    "adafruit-circuitpython-seesaw>=1.18.2",
    "adafruit-circuitpython-wiz>=1.1.4",
    "adafruit-circuitpython-requests>=4.1.17",
]

[dependency-groups]
dev = [
    "ruff>=0.4.4",
    "pre-commit>=3.7.1",
    "circuitpython-stubs",
]
