[project]
name = "aspide"
version = "0.3.0"
description = "Home Assistant & Python powered Dialer"
requires-python = ">=3.13"
dependencies = [
    "adafruit-circuitpython-busdevice>=5.2.17",
    "adafruit-circuitpython-neopixel>=6.4.2",
    "adafruit-circuitpython-seesaw>=1.18.2",
    "adafruit-circuitpython-requests>=4.1.17",
]

[dependency-groups]
dev = [
    "ruff>=0.4.4",
    "pre-commit>=3.7.1",
    "circuitpython-stubs",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "uv"
update_changelog_on_bump = false
major_version_zero = true
